Agrega imagenes icono a manifiesto.

--- a/gallery.html
+++ b/gallery.html
@@ -30,7 +30,7 @@
             <nav class="menu">
                 <ul role=menu>
                     <li role="menuitem"><b><a href="index.html">Inicio</a></b></li>
-                    <li role="menuitem"><b><a href="gallery.hmtl">Adopciones</a></b></li>
+                    <li role="menuitem"><b><a href="gallery.html">Adopciones</a></b></li>
                     <li role="menuitem"><b><a href="https://www.paypal.com/cl/home">Donaciones</a> </b></li>
                     <li role="menuitem"><b><a href="http://migmartinezm.pythonanywhere.com/registro">Registrarme</a> </b></li>
                     <li role="menuitem"><b><a href="http://migmartinezm.pythonanywhere.com/admin/login/?next=/admin/">Iniciar Sesion</a> </b></li>
