Agrega Conexion con API Mis Perris.

--- a/gallery.html
+++ b/gallery.html
@@ -44,13 +44,8 @@
     <main>
         <section id="galeria">
                 <h3 id="galleryTitle"><b>Adopciones</b> </h3>
-                <div role="figure" class="contenedor">
-                        <article>
-                            <h5><b>Nombre de Perro</b></h5>                
-                            <p><b>Raza: </b>Raza del perro</p>
-                            <p><b>Descripcion: </b>descripcion</p>
-                            <p><b>Estado: </b>Estado</p>
-                        </article>
+                <div role="figure" class="contenedor" id="listado">
+                
                 </div>
         </section>
     </main>
@@ -69,6 +64,7 @@
     </footer>
 
     <script src="js/app.js"></script>
+    <script src="js/jsonParse.js"></script>
 
 </body>
 </html>
