Agrega Filtro, Vistas Inicio Sesión y Registro, Conexion localStorage

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 <ul role=menu>
                     <li role="menuitem"><b><a href="index.html">Inicio</a></b></li>
                     <li role="menuitem"><b><a href="gallery.html">Adopciones</a></b></li>
-                    <li role="menuitem"><b><a href="https://www.paypal.com/cl/home">Donaciones</a> </b></li>
-                    <li role="menuitem"><b><a href="http://migmartinezm.pythonanywhere.com/registro">Registrarme</a> </b></li>
-                    <li role="menuitem"><b><a href="http://migmartinezm.pythonanywhere.com/admin/login/?next=/admin/">Iniciar Sesión</a> </b></li>
+                    <li role="menuitem"><b><a href="#">Donaciones</a> </b></li>
+                    <li role="menuitem"><b><a href="form.html">Registrarme</a> </b></li>
+                    <li role="menuitem"><b><a href="Sesion.html">Iniciar Sesión</a> </b></li>
                 </ul>
             </nav>
         </div>
