Corrige Links, Agrega Vistas a Caché

--- a/index.html
+++ b/index.html
@@ -103,18 +103,18 @@
             <section id="blog">
                 <div role="navigation" class="contenedor">
                         <article class="item1">
-                            <a href="http://migmartinezm.pythonanywhere.com/adopcion"><h2>¡Quiero Adoptar!</h2></a>
-                            <a href="http://migmartinezm.pythonanywhere.com/adopcion"><img src="img/perro-1.jpg" alt="perro1"></a>
+                            <a href="gallery.html"><h2>¡Quiero Adoptar!</h2></a>
+                            <a href="gallery.html"><img src="img/perro-1.jpg" alt="perro1"></a>
                             <p>Genial, Encuentra a tu nuevo compañero de vida AQUÍ</p>
                         </article>
                         <article class="item2">
-                            <a href="http://migmartinezm.pythonanywhere.com/registro/"><h2>¡Registrate Ahora!</h2></a>
-                            <a href="http://migmartinezm.pythonanywhere.com/registro/"><img src="img/adopcion-1.png" alt="perro3"></a>
+                            <a href="form.html"><h2>¡Registrate Ahora!</h2></a>
+                            <a href="form.html"><img src="img/adopcion-1.png" alt="perro3"></a>
                             <p>Unete a nuestra comunidad de adoptantes, Registra tu cuenta para iniciar. ¿Ya tienes cuenta pero OlVIDASTE TU CONTRASEÑA? No te preocupes recuperala Aqui</p>
                         </article>
                         <article class="item3">
-                            <a href="https://www.paypal.com/cl/signin?country.x=CL&locale.x=es_CL"><h2>Quiero Contribuir</h2></a>
-                            <a href="https://www.paypal.com/cl/signin?country.x=CL&locale.x=es_CL"><img src="img/perro-9.jpg" alt="perro4"></a>
+                            <a href="#"><h2>Quiero Contribuir</h2></a>
+                            <a href="#"><img src="img/perro-9.jpg" alt="perro4"></a>
                             <p> Ayúdanos a seguir nuestra noble cruzada, aceptamos donaciones a través de PayPal, no lo dudes más y Contribuye</p>
                         </article>
                         <article class="item4">
