Agrega notificaciones Push a la página.

--- a/index.html
+++ b/index.html
@@ -181,5 +181,6 @@
         
         </footer>
         <script src="js/app.js"></script>
+        <script src="js/push.min.js"></script>
     </body>
 </html>
