--- a/login.html
+++ b/login.html
@@ -69,5 +69,6 @@
 
         <script src="js/login.js"></script>
         <script src="js/validar.js"></script>
+        <script src="js/push.min.js"></script>
     </body>
 </html>
