--- a/order.html
+++ b/order.html
@@ -57,5 +57,6 @@
         
         </footer>
         <script src="js/list.js"></script> 
+        <script src="js/push.min.js"></script>
     </body>
 </html>
