--- a/register.html
+++ b/register.html
@@ -94,5 +94,6 @@
         </footer>
         <script src="js/postOrden.js"></script>
         <script src="js/validar.js"></script> 
+        <script src="js/push.min.js"></script>
     </body>
 </html>
