--- a/service.html
+++ b/service.html
@@ -55,5 +55,6 @@
         
         </footer>
         <script src="js/list2.js"></script> 
+        <script src="js/push.min.js"></script>
     </body>
 </html>
