--- a/register.html
+++ b/register.html
@@ -22,6 +22,7 @@
                     <a href="order.html">Ordenes de Trabajo</a>
                     <a href="register.html">Nueva Orden</a>
                     <a href="service.html">Clientes</a>
+                    <a href="register_client.html">Nuevo Cliente</a>
                     <a href="index.html">Cerrar Sesion</a>         
                 </nav>
             </div>
