Corrige llamadas a archivos js

--- a/register_client.html
+++ b/register_client.html
@@ -80,7 +80,8 @@
             </div>
         
         </footer>
-        <script src="js/postOrden.js"></script>
+        <script src="js/postCliente.js"></script>
         <script src="js/validar_client.js"></script> 
+        <script src="js/push.min.js"></script>
     </body>
 </html>
