Corrigue errores en javascript y html del modulo cliente

--- a/register_client.html
+++ b/register_client.html
@@ -39,7 +39,7 @@
                         <form id="formulario_2">
                                 
                             <p><label for="id_nombre">Nombre Cliente:</label> 
-                            <input type="text" name="cliente" required="" id="id_nombre"
+                            <input type="text" name="nombre" required="" id="id_nombre"
                                    maxlength="40" minlength="3" placeholder="Ingrese Nombre de Cliente" onkeyup="NoNumbers()"  required></p>
                             
                             <p><label for="id_direccion">Direccion:</label>
